--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,10 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
+        <ul class="desc-list">
+            <li>{{ site.description | escape }}</li>
+            <li class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></li>
+        </ul>
       </div>
     </div>
 
