--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,9 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <div class="type-js site-title-wrapper">
+        <a href="{{ '/' | relative_url }}" class="text-js site-title">./notes.ayo</a>
+    </div>
 
     {% if page_paths %}
       <nav class="site-nav">
