--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,21 @@
 
   <body>
 
-    {% include header.html %}
+      <div class="site-container">
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+        {% include header.html %}
 
-    {% include footer.html %}
+        <div class="site-body">
+            <main class="page-content" aria-label="Content">
+              <div class="wrapper">
+                {{ content }}
+              </div>
+            </main>
+        </div>
+
+        {% include footer.html %}
+
+    </div>
 
   </body>
 
