--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,15 +20,30 @@
           </span>
         </label>
 
-        <div class="trigger">
+        <!--div class="trigger">
           {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
             {% if my_page.title %}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                {% if my_page.url == page.url %}
+                        {% assign current = 'current' %}
+                {% endif %}
+                <a class="page-link {{ current }}" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {% endif %}
           {% endfor %}
-        </div>
+
+        </div-->
+<div class="trigger">
+    {% for link in site.navigation %}
+      {% assign current = nil %}
+      {% if page.url == link.url%}
+        {% assign current = 'current' %}
+      {% endif %}
+
+        <a class="page-link {{ current }}" href="{{ link.url | relative_url }}">{{ link.text }}</a>
+    {% endfor %}
+</div>
       </nav>
     {% endif %}
   </div>
 </header>
+
