some styles for mobile display

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,7 +18,7 @@ body {
 
 .page-content {
     background-color: white;
-    width: 700px;
+    width: 80%;
     margin: 30px auto !important;
     background-color: #444 !important;
     -webkit-border-radius: 10px;
