--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
-            {% if site.author %}
-              {{ site.author | escape }}
+            {% if site.attribution %}
+              {{ site.attribution }}
             {% else %}
               {{ site.title | escape }}
             {% endif %}
