--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
     <div class="type-js site-title-wrapper">
-        <a href="{{ '/' | relative_url }}" class="text-js site-title">./notes.ayo</a>
+        <a href="{{ '/' | relative_url }}" class="text-js site-title">Ayo Ayco</a>
     </div>
 
     {% if page_paths %}
