--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,22 +7,29 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {% endif %}
 
-  {{ content }}
+  <!-- start content-->
+  <!-- end content-->
 
+  <!-- start blog list-->
   {% if site.posts.size > 0 %}
   <h2 class="post-list-heading">{{ page.list_title }}</h2>
     <ul class="post-list">
       {% for post in site.posts %}
         <li>
           {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-          <span class="post-meta">{{ post.date | date: date_format }}</span>
+          <span class="post-meta">{{ post.project-date }}</span>
           <h3>
             <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
           </h3>
+          <div>
+              <p>{{ post.excerpt }}</p>
+              <a href="{{ post.url | relative_url }}" class="page-link">Read More</a>
+          </div> 
         </li>
       {% endfor %}
     </ul>
 
   {% endif %}
+  <!-- end blog list-->
 
 </div>
