--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,6 +8,14 @@ body {
     background: #333;
 }
 
+h1.page-heading {
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 72px;
+    margin: 20px 0;
+}
+
 .site-title {
     font-size: 50px;
     color: white !important;
