--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,7 +17,7 @@ h1.page-heading {
 }
 
 .site-title {
-    font-size: 50px;
+    font-size: 24px;
     color: white !important;
     text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
              0px 8px 13px rgba(0,0,0,0.1),
@@ -25,17 +25,13 @@ h1.page-heading {
 }
 
 .page-content {
-    background-color: white;
-    width: 70%;
-    margin: 30px auto !important;
-    background-color: #444 !important;
+    width: 80%;
+    margin: 10px auto !important;
+    background-color: transparent !important;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
-    padding: 20px;
-    -webkit-box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-    -moz-box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    padding: 30px 0;
     font-size: 16px;
 }
 
@@ -58,9 +54,20 @@ a, a:visited, .site-nav .page-link {
 }
 
 @media screen and (max-width: 600px) {
+    .site-nav .trigger {
+        padding: 15px;
+    }
+    .site-nav .trigger a.page-link {
+        margin-bottom: 10px;
+    }
     .site-nav {
-        background-color: transparent !important;
+        margin-top: 0px;
+        background-color: #2c2c2c !important;
         border: 0px !important;
+        -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+        -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+        box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+        z-index: 1;
     }
 }
 
@@ -103,7 +110,9 @@ a.post-link, h1.post-title {
 
 h1.post-title {
     color: #fff;
-    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 42px;
 }
 
 a:hover {
@@ -178,8 +187,8 @@ body {
   .cursor{
     display: block;
     position: absolute;
-    height: 100%;
-    top: 0;
+    height: 50%;
+    top: 15px;
     right: -5px;
     width: 3px;
     /* Change colour of Cursor Here */
