--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,41 @@
 <head>
+
+    <title>{{site.title}} | {{page.title}}</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- start social meta tags -->
+
+
+    <!-- Schema.org markup for Google+ -->
+    <meta itemprop="name" content="{{ page.title }}" />
+    <meta itemprop="description" content="{{ page.description }}" />
+    <meta itemprop="image" content="{{ '/assets/images/' | absolute_url }}{{ page.image }}" />
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@ayoayco_public" />
+    <meta name="twitter:title" content="{{ page.title}}" />
+    <meta name="twitter:description" content="{{ page.description }}" />
+    <meta name="twitter:creator" content="@ayoayco_public" />
+    <!-- Twitter summary card with large image must be at least 280x150px -->
+    <meta name="twitter:image:src" content="{{ '/assets/images/' | absolute_url }}{{ page.image }}" />
+
+     <!-- Open Graph data -->
+    <meta property="og:title" content="{{ page.title }}" />
+    {% if page.type == "post" %}
+    <meta property="og:type" content="article" />{% else %}<meta property="og:type" content="website" />{% endif %}
+    <meta property="og:url" content="{{ page.url | absolute_url }}" />
+    <meta property="og:image" content="{{ '/assets/images/' | absolute_url }}{{ page.image }}" />
+    <meta property="og:image:alt" content="{{ page.description }}" />
+    <meta property="og:description" content="{{ page.description }}" />
+    <meta property="og:site_name" content="{{ site.title }} | {{ page.title }}" />
+    <meta property="fb:admins" content="748355687" />
+
+  <!-- end social meta tags -->
+
+
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato" />
