--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ layout: default
           </h3>
           <div>
               <p>{{ post.excerpt }}</p>
-              <!--a href="{{ post.url | relative_url }}" class="page-link">Read More</a-->
+              <a href="{{ post.url | relative_url }}" class="page-link">Read More</a>
           </div> 
         </li>
       {% endfor %}
