--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
             {% endif %}
             </li>
             {% if site.email %}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            <li><a class="site-email" href="#">{{ site.email }}</a></li>
             {% endif %}
         </ul>
       </div>
