--- a/assets/main.scss
+++ b/assets/main.scss
@@ -113,6 +113,10 @@ h1.post-title {
     font-size: 42px;
 }
 
+a.site-email {
+    font-size: xx-small;
+}
+
 a:hover {
     color: #f90;
     text-decoration: none;
