--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -11,17 +11,17 @@ layout: default
   <h2 class="post-list-heading">{{ page.list_title }}</h2>
     <ul class="post-list">
       {% for category in site.categories %}
-        {% if category[0] == "projects" %}
+        {% if category[0] == page.list-category %}
           {% for post in category[1] %}
             <li>
               {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-              <span class="post-meta">{{ post.project-date }}</span>
+              <span class="post-meta">{{ post.date | date: date_format }}</span>
               <h3>
                 <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
               </h3>
               <div>
                   <p>{{ post.excerpt }}</p>
-                  <!--a href="{{ post.url | relative_url }}" class="page-link">Read More</a-->
+                  <a href="{{ post.url | relative_url }}" class="readmore-btn">Read More >></a>
               </div> 
             </li>
           {% endfor %}
