--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,7 +34,12 @@ h1.page-heading {
     font-size: 16px;
 }
 
-.site-nav .page-link.current {
+.readmore-btn, .readmore-btn:visited {
+    color: #252525;
+}
+
+.site-nav .page-link.current,
+.readmore-btn {
     background-color: #fc0;
     color: #222;
     -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.5), 0 1px 5px rgba(0,0,0,0.5);
@@ -43,7 +48,7 @@ h1.page-heading {
     text-shadow: 0 1px 0 rgba(255,255,255,0.3);
 }
 
-a, a:visited, .site-nav .page-link {
+a, .site-nav .page-link, .readmore-btn {
     color: #fc0;
     text-decoration: none;
     -webkit-transition: all 0.25s;
@@ -70,7 +75,8 @@ a, a:visited, .site-nav .page-link {
     }
 }
 
-.site-nav .page-link:hover {
+.site-nav .page-link:hover,
+.readmore-btn:hover {
     color: #fc0;
     background-color: #252525;
     -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5), 0 1px 0 rgba(255,255,255,0.1);
@@ -79,7 +85,7 @@ a, a:visited, .site-nav .page-link {
     text-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
 
-.site-nav .page-link {
+.site-nav .page-link, .readmore-btn {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -94,11 +100,8 @@ a, a:visited, .site-nav .page-link {
     transition: all 0.25s;
 }
 
-a.post-link:hover {
-    color: white;
-}
 a.post-link, h1.post-title {
-    color: #ddd;
+    color: #fc0;
     font-weight: bold;
     display: block;
     font-size: 2em;
