add talks; fix projects page date

--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -21,7 +21,9 @@ layout: default
               </h3>
               <div>
                   <p>{{ post.excerpt }}</p>
+                  {% if category[0] != "talks" %}
                   <a href="{{ post.url | relative_url }}" class="readmore-btn">Read More >></a>
+                  {% endif %}
               </div> 
             </li>
           {% endfor %}
