--- a/assets/main.scss
+++ b/assets/main.scss
@@ -35,7 +35,7 @@ h1.page-heading {
 }
 
 .readmore-btn, .readmore-btn:visited {
-    color: #252525;
+    color: #252525 !important;
 }
 
 .site-nav .page-link.current,
