--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,12 @@ layout: default
   <header class="post-header">
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+          {% if page.category != "projects" %}
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+        {{ page.date | date:date_format }}
+          {% else %}
         {{ page.project-date }}
+          {% endif %}
       </time>
       {% if page.author %}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
