--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,6 +15,12 @@ h1.page-heading {
     margin: 20px 0;
 }
 
+h4 {
+    margin-top: 35px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
 .site-title {
     font-size: 24px;
     color: white !important;
@@ -23,8 +29,13 @@ h1.page-heading {
              0px 18px 23px rgba(0,0,0,0.1);
 }
 
-.page-content {
+div.wrapper {
     width: 80%;
+    max-width: 100% !important;
+}
+
+.page-content {
+    width: 100%;
     margin: 10px auto !important;
     background-color: transparent !important;
     -webkit-border-radius: 10px;
@@ -48,7 +59,7 @@ h1.page-heading {
     text-shadow: 0 1px 0 rgba(255,255,255,0.3);
 }
 
-a, .site-nav .page-link, .readmore-btn {
+a, a:visited, .site-nav .page-link, .readmore-btn {
     color: #fc0;
     text-decoration: none;
     -webkit-transition: all 0.25s;
