--- a/assets/main.scss
+++ b/assets/main.scss
@@ -85,8 +85,7 @@ a, a:visited, .site-nav .page-link, .readmore-btn {
     }
 }
 
-.site-nav .page-link:hover,
-.readmore-btn:hover {
+.site-nav .page-link:hover {
     color: #fc0;
     background-color: #252525;
     -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5), 0 1px 0 rgba(255,255,255,0.1);
