--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,9 +15,23 @@ h1.page-heading {
     margin: 20px 0;
 }
 
+div#main-jumbotron {
+    padding: 0 0 0px;
+}
+
+div#main-jumbotron #profile {
+    font-size: xx-large;
+}
+
+div#main-jumbotron #profile em {
+    font-weight: bold;
+    font-style: normal;
+}
+
 h4 {
     font-weight: bold;
     margin-bottom: 0;
+    font-style: italic;
 }
 
 .site-title {
