--- a/assets/main.scss
+++ b/assets/main.scss
@@ -29,6 +29,7 @@ div#main-jumbotron #profile em {
 }
 
 h4 {
+    font-size: 18px;
     font-weight: bold;
     margin-bottom: 0;
     font-style: italic;
