--- a/assets/main.scss
+++ b/assets/main.scss
@@ -28,10 +28,14 @@ div#main-jumbotron #profile em {
     font-style: normal;
 }
 
-h4 {
+h3.section-title {
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 0;
+    font-style: italic;
+}
+
+h4.section-subtitle {
     font-style: italic;
 }
 
