make hover and visited colors the same

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,7 +32,6 @@ h3.section-title {
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 0;
-    font-style: italic;
 }
 
 h4.section-subtitle {
@@ -77,7 +76,7 @@ div.wrapper {
     text-shadow: 0 1px 0 rgba(255,255,255,0.3);
 }
 
-a, a:visited, .site-nav .page-link, .readmore-btn {
+a, .site-nav .page-link, .readmore-btn {
     color: #fc0;
     text-decoration: none;
     -webkit-transition: all 0.25s;
@@ -148,7 +147,7 @@ a.site-email {
     font-size: xx-small;
 }
 
-a:hover {
+a:hover, a:visited {
     color: #f90;
     text-decoration: none;
 }
