--- a/assets/main.scss
+++ b/assets/main.scss
@@ -31,7 +31,8 @@ div#main-jumbotron #profile em {
 h3.section-title {
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 0;
+    margin: 30px 0 0 !important;
+    font-style: italic;
 }
 
 h4.section-subtitle {
