some styles; add download cv button

--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -22,7 +22,7 @@ layout: default
               <div>
                   <p>{{ post.excerpt }}</p>
                   {% if category[0] != "talks" %}
-                  <a href="{{ post.url | relative_url }}" class="readmore-btn">Read More >></a>
+                  <a href="{{ post.url | relative_url }}" class="primary-btn">Read More >></a>
                   {% endif %}
               </div> 
             </li>
