--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,7 +16,10 @@ h1.page-heading {
 }
 
 div#main-jumbotron {
+    margin-top: 20px;
     padding: 0 0 0px;
+    line-height: 50px;
+    text-align: center;
 }
 
 div#main-jumbotron #profile {
@@ -31,7 +34,7 @@ div#main-jumbotron #profile em {
 h3.section-title {
     font-size: 18px;
     font-weight: bold;
-    margin: 30px 0 0 !important;
+    margin: 50px 0 0 !important;
     font-style: italic;
 }
 
@@ -48,8 +51,9 @@ h4.section-subtitle {
 }
 
 div.wrapper {
-    width: 70%;
+    width: 40%;
     max-width: 100% !important;
+    line-height: 25px;
 }
 
 .page-content {
@@ -63,12 +67,12 @@ div.wrapper {
     font-size: 16px;
 }
 
-.readmore-btn, .readmore-btn:visited {
+.primary-btn, .primary-btn:visited {
     color: #252525 !important;
 }
 
-.site-nav .page-link.current,
-.readmore-btn {
+
+.primary-btn {
     background-color: #fc0;
     color: #222;
     -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.5), 0 1px 5px rgba(0,0,0,0.5);
@@ -77,7 +81,7 @@ div.wrapper {
     text-shadow: 0 1px 0 rgba(255,255,255,0.3);
 }
 
-a, .site-nav .page-link, .readmore-btn {
+a, .site-nav .page-link {
     color: #fc0;
     text-decoration: none;
     -webkit-transition: all 0.25s;
@@ -87,6 +91,21 @@ a, .site-nav .page-link, .readmore-btn {
 }
 
 @media screen and (max-width: 600px) {
+    div#main-jumbotron {
+        padding: 0 0 0px;
+        line-height: 40px;
+        text-align: center;
+    }
+
+    div#main-jumbotron #profile {
+        font-size: 30px;
+    }
+
+    div.wrapper {
+        width: 70%;
+        max-width: 100% !important;
+    }
+
     .site-nav .trigger {
         padding: 15px;
     }
@@ -104,7 +123,12 @@ a, .site-nav .page-link, .readmore-btn {
     }
 }
 
-.site-nav .page-link:hover {
+.download-btn {
+    font-size: large !important;
+}
+
+.site-nav .page-link:hover,
+.site-nav .page-link.current {
     color: #fc0;
     background-color: #252525;
     -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5), 0 1px 0 rgba(255,255,255,0.1);
@@ -113,7 +137,7 @@ a, .site-nav .page-link, .readmore-btn {
     text-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
 
-.site-nav .page-link, .readmore-btn {
+.site-nav .page-link, .primary-btn {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
