--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,6 +23,7 @@ div#main-jumbotron {
 
 div#main-jumbotron #profile {
     font-size: xx-large;
+    padding-bottom: 15px;
 }
 
 div#main-jumbotron #profile em {
@@ -31,7 +32,7 @@ div#main-jumbotron #profile em {
 }
 
 h3.section-title {
-    font-size: 18px;
+    font-size: x-large !important;
     font-weight: bold;
     margin: 50px 0 0 !important;
     font-style: italic;
