--- a/assets/main.scss
+++ b/assets/main.scss
@@ -92,6 +92,7 @@ a, .site-nav .page-link {
 
 @media screen and (max-width: 600px) {
     div#main-jumbotron {
+        margin-top: 0px;
         padding: 0 0 0px;
         text-align: center;
     }
