add, hide announcements div

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,12 @@
         {% include header.html %}
 
         <div class="site-body">
+          <!--div id="announcements">
+          
+              NEW THINGS ARE COMING 
+          
+          </div-->
+
             <main class="page-content" aria-label="Content">
               <div class="wrapper">
                 {{ content }}
