update description in jumbotron

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
   <!-- end content-->
 
 <div id="main-jumbotron">
-    <p id="profile"><em>Ayo Ayco</em> is a software engineer + web developer based in Metro Manila, Philippines</p>
+    <p id="profile"><em>Ayo Ayco</em> is a software engineer from the Philippines</p>
     <a href="https://drive.google.com/file/d/1dIiUxUuClSxH8QHPDyfP6qb0V_rPxyUn/view?usp=sharing" target="_blank" class="primary-btn download-btn">Download CV</a>
 </div>
 <div id="sections">
