--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
     <h3 class="section-title">Profile</h3>
     <h4 class="section-subtitle">Education and Experience</h4>
     <ul>
-        <li>Graduated Bachelors of Science in Computer Science from the <a href="http://uplb.edu.ph" target="_blank">University of the Philippines Los Ba&ntilde;os</a></li>
+        <li>Graduated Bachelors of Science in Computer Science from the <a href="http://uplb.edu.ph" target="_blank">University of the Philippines</a></li>
         <li>Over seven years of professional experience in building web applications for private businesses and government-funded projects.</li>
     </ul>
 
