add note: bayanihan basurahan

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,7 +20,11 @@ h1.page-heading {
     text-align: center;
     font-weight: bold;
     font-size: 72px;
+}
+
+h1, h2, h3, h4, h5, h6 {
     margin: 20px 0;
+    line-height: 1.5;
 }
 
 div#main-jumbotron {
@@ -168,10 +172,14 @@ a, .site-nav .page-link {
     transition: all 0.25s;
 }
 
+hr {
+    margin: 70px 0;
+}
+
 a.post-link, h1.post-title {
     color: #fc0;
     font-weight: bold;
-    line-height: 1;
+    line-height: 1.5;
     display: block;
     font-size: 2em;
     -webkit-margin-after: 0.67em;
@@ -183,6 +191,28 @@ h1.post-title {
     color: #fff;
     font-weight: bold;
     font-size: 42px;
+    line-height: 1.5;
+}
+
+ul.post-list {
+    li {
+        p, ol li, ul li {
+            font-size: 25px;
+            line-height: 1.5;
+        }
+    }
+}
+
+article.post {
+    div.post-content {
+        p, ol li, ul li {
+            font-size: 25px;
+            line-height: 1.5;
+        }
+        p {
+            margin-bottom: 25px;
+        }
+    }
 }
 
 a.site-email {
