--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,8 @@ layout: default
   <!-- end content-->
 
 <div id="main-jumbotron">
-    <p id="profile"><em>Ayo Ayco</em> is a software engineer from the Philippines</p>
+    <p id="profile"><em>Ayo Ayco</em> is a software engineer from the Philippines. <a href="#"></a></p>
+    <p id="more-profile">He has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System.</p>
     <a href="https://drive.google.com/file/d/1gtdy_C3UREi97QQ59faxZXlz9m0KLZZ2/view?usp=sharing" target="_blank" class="primary-btn download-btn">Download CV</a>
     
 </div>
@@ -18,7 +19,7 @@ layout: default
         <h3 class="section-title">Profile</h3>
         <h4 class="section-subtitle">Education and Experience</h4>
         <ul>
-            <li>Graduated Bachelors of Science in Computer Science from the <a href="http://uplb.edu.ph" target="_blank">University of the Philippines</a></li>
+            <li>Graduated BS Computer Science from the <a href="http://uplb.edu.ph" target="_blank">University of the Philippines</a></li>
             <li>Over eight years of professional experience in building web applications for private businesses and government-funded projects.</li>
         </ul>
     </div>
