--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
 
 <div id="main-jumbotron">
     <p id="profile"><em>Ayo Ayco</em> is a software engineer from the Philippines. <a href="#"></a></p>
-    <p id="more-profile">He has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System.</p>
+    <p id="more-profile">He has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as <em>University of the Philippines’ National Operational Assessment of Hazards</em> and <em>Ateneo’s Cloud-Based Intelligent Total Analysis System.</em></p>
     <a href="https://drive.google.com/file/d/1gtdy_C3UREi97QQ59faxZXlz9m0KLZZ2/view?usp=sharing" target="_blank" class="primary-btn download-btn">Download CV</a>
     
 </div>
