--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -7,12 +7,9 @@ layout: default
   {{ content }}
   <!-- end content-->
 
-<div id="main-jumbotron">
-    <p id="profile"><em>Ayo Ayco</em> is a software engineer from the Philippines. <a href="#"></a></p>
-    <p id="more-profile">He has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as <em>University of the Philippines’ National Operational Assessment of Hazards</em> and <em>Ateneo’s Cloud-Based Intelligent Total Analysis System.</em></p>
-    <a href="https://drive.google.com/file/d/1gtdy_C3UREi97QQ59faxZXlz9m0KLZZ2/view?usp=sharing" target="_blank" class="primary-btn download-btn">Download CV</a>
-    
-</div>
+<!--div id="main-jumbotron">
+    <p id="profile">Ayo Ayco is a creative who writes <em class="home">blogs</em>, creates <em class="home">apps</em>, and enjoy <em class="home">games</em>. <a href="#"></a></p>
+</div-->
 <div id="sections">
 
     <div id="profile-section">
@@ -21,6 +18,7 @@ layout: default
         <ul>
             <li>Graduated BS Computer Science from the <a href="http://uplb.edu.ph" target="_blank">University of the Philippines</a></li>
             <li>Over eight years of professional experience in building web applications for private businesses and government-funded projects.</li>
+            <li>Has contributed software development expertise to UPLB, DOST, Infor, and projects such as the <em>University of the Philippines’ National Operational Assessment of Hazards</em> and <em>Ateneo’s Cloud-Based Intelligent Total Analysis System.</em></li>
         </ul>
     </div>
 
