--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -9,6 +9,51 @@ body {
     min-width: 315px;
 }
 
+em.home {
+    color: #FF19EE;
+}
+
+section#icons-container {
+    background: #B309a6;
+    height: 500px;
+    width: 100%;
+
+    #wrapper{
+        padding: 100px 100px 0;
+        width: 1000px;
+        margin: 0 auto;
+
+        #left{
+            width: 50%;
+            float: left;
+            h1 {
+                font-size: 50px;
+                font-weight: bold;
+            }
+        }
+
+        #right {
+            float: left;
+            width: 50%;
+
+            #blog-link {
+                display: block;
+                height: 300px;
+                background-image: url('./images/ayo_blog-min.png');
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-color: white;
+            }
+        }
+    }
+}
+
+div#alon-div {
+    background-image: url('./images/alon.svg');
+    background-color: #B309a6;
+    height: 24px;
+}
+
 div#announcements {
     background-color: white;
     color: #555;
@@ -27,7 +72,7 @@ div#main-jumbotron {
     margin: 20px auto 0;
     padding: 0 0 0px;
     text-align: center;
-    width: 70%;
+    width: 100%;
 }
 
 div#main-jumbotron #more-profile {
@@ -38,6 +83,7 @@ div#main-jumbotron #more-profile {
 }
 div#main-jumbotron #profile {
     font-size: xx-large;
+    font-weight: bold;
     padding: 0 15px 15px;
     margin: 0px;
 }
@@ -114,6 +160,9 @@ div#sub-sections * {
 
 .primary-btn {
     background-color: #fc0;
+    width: 200px;
+    text-align: center;
+    line-height: 2;
     color: #222;
     -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.5), 0 1px 5px rgba(0,0,0,0.5);
     -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.5),0 1px 5px rgba(0,0,0,0.5);
@@ -134,7 +183,57 @@ a, .site-nav .page-link {
     transition: all 0.25s;
 }
 
+@media screen and (max-width: 1100px) {
+    section#icons-container {
+        height: 400px;
+
+        #wrapper {
+            padding: 100px 30px 0;
+            width: 500px;
+            margin: 0 auto;
+            
+            #left {
+                width: 100%;
+                text-align: center;
+                h1 {
+                    font-size: 35px;
+                }
+                p {
+                    font-size: normal;
+                }
+            }
+
+            #right {
+                display: none;
+            }
+        }
+    }
+}
 @media screen and (max-width: 600px) {
+
+    section#icons-container {
+        height: 350px;
+        #wrapper{
+            padding: 70px 30px 30px;
+            width: calc(100% - 60px);
+            margin: 0 auto;
+
+            #left {
+                width: 100%;
+                text-align: center;
+                h1 {
+                    font-size: 35px;
+                }
+                p {
+                    font-size: normal;
+                }
+            }
+            #right {
+                display: none;
+            }
+        }
+    }
+
 
     div#main-jumbotron {
         margin-top: 0px;
@@ -156,6 +255,9 @@ a, .site-nav .page-link {
     .site-nav .trigger a.page-link {
         margin-bottom: 10px;
     }
+    .site-nav a.page-link {
+        margin-left: 0px;
+    }
     .site-nav {
         margin-top: 0px;
         background-color: #2c2c2c !important;
@@ -164,6 +266,7 @@ a, .site-nav .page-link {
         -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
         box-shadow: 0 1px 3px rgba(0,0,0,0.5);
         z-index: 1;
+        text-align: left;
     }
     div#sub-sections {
         display: block;
@@ -176,7 +279,7 @@ a, .site-nav .page-link {
 
 .site-nav .page-link:hover,
 .site-nav .page-link.current {
-    color: #fc0;
+    color: #ffffff;
     background-color: #252525;
     -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5), 0 1px 0 rgba(255,255,255,0.1);
     -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5),0 1px 0 rgba(255,255,255,0.1);
@@ -184,6 +287,9 @@ a, .site-nav .page-link {
     text-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
 
+.site-nav .page-link {
+    color: #ffffff;
+}
 .site-nav .page-link, .primary-btn {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -257,11 +363,16 @@ a:hover, a:visited {
     margin-left: 0;
 }
 
-.page-content {
-}
-
 .footer-col-wrapper {
     color: #ddd
+}
+
+.site-header {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    z-index: 1;
+    box-shadow: 0 -2px 6px #000;
 }
 
 .site-header, .site-footer {
