--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -27,6 +27,7 @@ section#icons-container {
             width: 50%;
             float: left;
             h1 {
+                padding-right: 20px;
                 font-size: 50px;
                 font-weight: bold;
             }
