--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -10,25 +10,26 @@
         {% include header.html %}
 
         <div class="site-body">
-            <section id="icons-container" >
-              <div id="wrapper">
-                <div id="left">
-                  <!--h1>A complete collection of my works.</h1>
-                  <p>Everything for you, 100% free.</p>
-                  <a href="https://drive.google.com/file/d/1gtdy_C3UREi97QQ59faxZXlz9m0KLZZ2/view?usp=sharing" target="_blank" class="primary-btn download-btn">Coming Soon</a-->
+            {% if page.layout == 'home' %}
+              <section id="icons-container" >
+                <div id="jumbotron-wrapper">
+                  <div id="center">
+                    <!--h1>A complete collection of my works.</h1>
+                    <p>Everything for you, 100% free.</p>
+                    <a href="https://drive.google.com/file/d/1gtdy_C3UREi97QQ59faxZXlz9m0KLZZ2/view?usp=sharing" target="_blank" class="primary-btn download-btn">Coming Soon</a-->
 
-                    <h1>Ayo Ayco is a software engineer from the Philippines. <a href="#"></a></h1>
-                    <a href="https://drive.google.com/file/d/1gtdy_C3UREi97QQ59faxZXlz9m0KLZZ2/view?usp=sharing" target="_blank" class="primary-btn download-btn">Download CV</a>
-    
+                      <h1>Ayo Ayco is a software engineer from the Philippines. <a href="#"></a></h1>
+                      <a href="https://drive.google.com/file/d/1gtdy_C3UREi97QQ59faxZXlz9m0KLZZ2/view?usp=sharing" target="_blank" class="primary-btn download-btn">Download CV</a>
+      
+                  </div>
+                  <!--div id="right">
+                    <a href="https://blog.ayoayco.com" target="_blank" id="blog-link"></a>
+                  </div-->
                 </div>
-                <div id="right">
-                  <a href="https://blog.ayoayco.com" target="_blank" id="blog-link"></a>
-                </div>
-                </div>
-            </section>
-
+              </section>
+              <div id="alon-div"></div>
+            {% endif %}
             
-            <div id="alon-div"></div>
             <main class="page-content" aria-label="Content">
               <div class="wrapper">
                 {{ content }}
