--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -18,19 +18,26 @@ section#icons-container {
     height: 500px;
     width: 100%;
 
-    #wrapper{
+    #jumbotron-wrapper{
         padding: 100px 100px 0;
         width: 1000px;
         margin: 0 auto;
 
+        h1 {
+            padding-right: 20px;
+            font-size: 50px;
+            font-weight: bold;
+        }
+
+        #center {
+            width: 50%;
+            margin: 0 auto;
+            text-align: center;
+        }
+
         #left{
             width: 50%;
             float: left;
-            h1 {
-                padding-right: 20px;
-                font-size: 50px;
-                font-weight: bold;
-            }
         }
 
         #right {
@@ -188,20 +195,24 @@ a, .site-nav .page-link {
     section#icons-container {
         height: 400px;
 
-        #wrapper {
+        #jumbotron-wrapper {
             padding: 100px 30px 0;
             width: 500px;
             margin: 0 auto;
-            
-            #left {
+
+     
+            #left, #center {
                 width: 100%;
                 text-align: center;
+
                 h1 {
                     font-size: 35px;
                 }
+
                 p {
                     font-size: normal;
                 }
+        
             }
 
             #right {
@@ -214,12 +225,12 @@ a, .site-nav .page-link {
 
     section#icons-container {
         height: 350px;
-        #wrapper{
+        #jumbotron-wrapper{
             padding: 70px 30px 30px;
             width: calc(100% - 60px);
             margin: 0 auto;
 
-            #left {
+            #left, #center {
                 width: 100%;
                 text-align: center;
                 h1 {
