--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
 
 <div class="home">
@@ -27,6 +28,7 @@ layout: default
             <h3 class="section-title">Trusted By</h3>
             <h4 class="section-subtitle">Clients and Employers</h4>
             <ul>
+                <li><a href="https://impacthub.ph/">Impact Hub Manila</a></li>
                 <li><a href="https://infor.com">Infor</a></li>
                 <li><a href="http://ajwcc.ateneo.edu/">AJWCC</a></li>
                 <li><a href="http://noah.up.edu.ph">Project NOAH</a></li>
