update to new domain

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -23,7 +23,7 @@
       
                   </div>
                   <!--div id="right">
-                    <a href="https://blog.ayoayco.com" target="_blank" id="blog-link"></a>
+                    <a href="https://blog.ayco.io" target="_blank" id="blog-link"></a>
                   </div-->
                 </div>
               </section>
