--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -4,7 +4,7 @@
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
     <div class="type-js site-title-wrapper">
-        <a href="{{ '/' | relative_url }}" class="text-js site-title">AyoAyco.com</a>
+        <a href="{{ '/' | relative_url }}" class="text-js site-title">ayco.io</a>
     </div>
 
     {% if page_paths %}
