--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -18,7 +18,17 @@ published: true
         <h4 class="section-subtitle">Education and Experience</h4>
         <ul>
             <li>Over NINE years of professional experience in building web applications for private businesses and government-funded projects.</li>
+
             <li>Graduated BS Computer Science from the <a href="http://uplb.edu.ph" target="_blank">University of the Philippines</a></li>
+
+            <li>
+            Global Innovation Winner for the Hack for Good with Angular and NativeScript 2019 🎉 <a href="https://blog.angular.io/hack-for-good-6b500f1946a3#36f0" target="_blank">Angular announcement</a>
+            </li>
+
+            <li>
+            Innovation Award, HIRAYA, Infor Sinagtala Awards 2018;
+            </li>
+
             <li>Has contributed software development expertise to UPLB, DOST, Infor, and projects such as the <em>University of the Philippines’ National Operational Assessment of Hazards</em> and <em>Ateneo’s Cloud-Based Intelligent Total Analysis System.</em></li>
         </ul>
     </div>
