work anniversary! increment years

--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -15,7 +15,7 @@ published: true
           <h4 class="section-subtitle">Education and Experience</h4>
           <ul>
               <li>
-                Over NINE years of professional experience in building web applications for private businesses and government-funded projects.
+                Over TEN years of professional experience in building web applications for private businesses and government-funded projects.
               </li>
 
               <li>
