update url to uni

--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -19,7 +19,7 @@ published: true
               </li>
 
               <li>
-                Graduated BS Computer Science from the <a href="http://uplb.edu.ph" target="_blank">University of the Philippines</a>
+                Graduated BS Computer Science from the <a href="https://up.edu.ph/" target="_blank">University of the Philippines</a>
               </li>
 
               <li>
